tests/baselines/reference/privateNameStaticAccessorssDerivedClasses.errors.txt
privateNameStaticAccessorssDerivedClasses.ts(4,23): error TS2339: Property '#prop' does not exist on type 'typeof Derived'.
privateNameStaticAccessorssDerivedClasses.ts(9,23): error TS2339: Property '#prop' does not exist on type 'typeof Derived'.


==== privateNameStaticAccessorssDerivedClasses.ts (2 errors) ====
    class Base {
        static get #prop(): number { return  123; }
        static method(x: typeof Derived) {
            console.log(x.#prop);
                          ~~~~~
!!! error TS2339: Property '#prop' does not exist on type 'typeof Derived'.
        }
    }
    class Derived extends Base {
        static method(x: typeof Derived) {
            console.log(x.#prop);
                          ~~~~~
!!! error TS2339: Property '#prop' does not exist on type 'typeof Derived'.
        }
    }
    